# src/Entity/Destination.php
@@ -3,6 +3,8 @@
 namespace App\Entity;
 
 use App\Repository\DestinationRepository;
+use Doctrine\Common\Collections\ArrayCollection;
+use Doctrine\Common\Collections\Collection;
 use Doctrine\ORM\Mapping as ORM;
 
 /**
@@ -22,6 +24,22 @@ class Destination
      */
     private $name;
 
+    /**
+     * @ORM\OneToMany(targetEntity=Terminal::class, mappedBy="destination")
+     */
+    private $terminals;
+
+    /**
+     * @ORM\OneToMany(targetEntity=Flight::class, mappedBy="destination")
+     */
+    private $flights;
+
+    public function __construct()
+    {
+        $this->terminals = new ArrayCollection();
+        $this->flights = new ArrayCollection();
+    }
+
     public function getId(): ?int
     {
         return $this->id;
@@ -35,6 +53,66 @@ class Destination
     public function setName(string $name): self
     {
         $this->name = $name;
+
+        return $this;
+    }
+
+    /**
+     * @return Collection|Terminal[]
+     */
+    public function getTerminals(): Collection
+    {
+        return $this->terminals;
+    }
+
+    public function addTerminal(Terminal $terminal): self
+    {
+        if (!$this->terminals->contains($terminal)) {
+            $this->terminals[] = $terminal;
+            $terminal->setDestination($this);
+        }
+
+        return $this;
+    }
+
+    public function removeTerminal(Terminal $terminal): self
+    {
+        if ($this->terminals->removeElement($terminal)) {
+            // set the owning side to null (unless already changed)
+            if ($terminal->getDestination() === $this) {
+                $terminal->setDestination(null);
+            }
+        }
+
+        return $this;
+    }
+
+    /**
+     * @return Collection|Flight[]
+     */
+    public function getFlights(): Collection
+    {
+        return $this->flights;
+    }
+
+    public function addFlight(Flight $flight): self
+    {
+        if (!$this->flights->contains($flight)) {
+            $this->flights[] = $flight;
+            $flight->setDestination($this);
+        }
+
+        return $this;
+    }
+
+    public function removeFlight(Flight $flight): self
+    {
+        if ($this->flights->removeElement($flight)) {
+            // set the owning side to null (unless already changed)
+            if ($flight->getDestination() === $this) {
+                $flight->setDestination(null);
+            }
+        }
 
         return $this;
     }
